#77 fix: Redis 역직렬화 문제 해결, 복잡한 로직 제거